--- a/NoPain/src/main/webapp/index.html
+++ b/NoPain/src/main/webapp/index.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<head>
+<link rel="stylesheet" type="text/css" href="NoPain.css">
+	<title>No pain</title>
+</head>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<meta charset="utf-8">
+
+<body>
+
+<div class="container login-container">
+            <div class="row">
+            <center>
+                <div class="col-md-6 login-form-1">
+                    <form>
+                    <h3>Cadastro para usuários</h3><br>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Nome " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Nickname " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Email " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="password" class="form-control" placeholder="senha " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="submit" class="btnSubmit" value="Login" />
+                        </div><br>
+
+                            <a href="#" class="ForgetPwd">Esqueceu sua senha?</a>
+                        <div class="form-group"> <br><br>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6 login-form-2">
+
+                    <form>
+                    <h3>Cadastro para farmácia</h3><br>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Nome " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Email " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="password" class="form-control" placeholder="Senha " value="" />
+                        </div><br>
+
+                        <div class="form-group">
+                            <input type="submit" class="btnSubmit" value="Login" />
+                        </div><br><br><br>
+
+                            <a href="#" class="ForgetPwd" value="Login ">Esqueceu sua senha?</a>
+                        <div class="form-group"><br>
+
+
+                        </div>
+                    </form>
+                    </center>
+                </div>
+            </div>
+        </div>
+
+</body>
 </html>
