--- a/NoPain/src/main/webapp/index.html
+++ b/NoPain/src/main/webapp/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="NoPain.css">
-	<title>No pain</title>
+	<title>Nopain/Cadastro</title>
+    <meta charset="utf-8">
 </head>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<meta charset="utf-8">
 
 <body>
+
+<center><h1 id="a">Cadastre-se aqui</h1></center>
+<center><a href="NoPainInicial.html"><img src="https://images.emojiterra.com/google/android-nougat/512px/1f48a.png"></a></center><br><br>
 
 <div class="container login-container">
             <div class="row">
@@ -33,10 +34,9 @@
                         </div><br>
 
                         <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Login" />
+                            <input type="submit" class="btnSubmit" value="Entrar" />
                         </div><br>
 
-                            <a href="#" class="ForgetPwd">Esqueceu sua senha?</a>
                         <div class="form-group"> <br><br>
 
                         </div>
@@ -59,11 +59,10 @@
                         </div><br>
 
                         <div class="form-group">
-                            <input type="submit" class="btnSubmit" value="Login" />
+                            <input type="submit" class="btnSubmit" value="Entrar" />
                         </div><br><br><br>
 
-                            <a href="#" class="ForgetPwd" value="Login ">Esqueceu sua senha?</a>
-                        <div class="form-group"><br>
+                           <br>
 
 
                         </div>
